[project]
name = "throne-client"
version = "0.1.6"
description = "An async client for interacting with Throne wishlists."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Squidi", email = "97200360+Squidiis@users.noreply.github.com" }
]
dependencies = [
    "playwright>=1.42.0",
    "playwright-stealth",
    "beautifulsoup4>=4.14.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"